# bulk-webp-converter

./: LICENSE  README.md  pyproject.toml
src/bulk_webp_converter/: __main__.py  check_directory.py  constants.py  convert_image.py  key_binding.py  main.py  resize_image.py
